--- a/_posts/2013-01-11-sympaq.md
+++ b/_posts/2013-01-11-sympaq.md
@@ -7,4 +7,4 @@ categories: [work]
 
 <h2 data-icon="⚒">logo + design + front-end + wordpress</h2>
 
-<a href="http://sympaq.com/" class="button" data-icon="✈">Coming Soon</a>
+<a href="http://sympaq.com/" class="button" data-icon="✈">View Project</a>
