--- a/_posts/2013-01-11-sympaq.md
+++ b/_posts/2013-01-11-sympaq.md
@@ -7,4 +7,6 @@ categories: [work]
 
 <h2 data-icon="⚒">logo + design + front-end + wordpress</h2>
 
+<p>Sympaq is a leader in cost accounting software, but there website was stuck in the DOS age (witty, I know, but true). So they needed help <strong>visualizing what they offered</strong> as well as having an easier way to publish their knowledge. WordPress was the perfect solution for them, with a wee-bit of customization. We also helped with screencasting using screenr.com and simple voiceovers.</p>
+
 <a href="http://sympaq.com/" class="button" data-icon="✈">View Project</a>
