--- a/_posts/2013-02-03-resizio.md
+++ b/_posts/2013-02-03-resizio.md
@@ -9,4 +9,4 @@ categories: [work]
 
 Have an image you want to use in a document, or on a website? But is it too big? Before you needed some sort of image editing software **and you needed to know what to do with it**. Not no more! Just upload, choose a max height or width and blammo.
 
-<span class="button disabled" data-icon="✈">Coming Soon</span>
+<a href="http://image.jefff.co" class="button" data-icon="✈">Dev&rsquo;ing</a>
