--- a/_posts/2013-02-04-nasdaq.com.md
+++ b/_posts/2013-02-04-nasdaq.com.md
@@ -1,6 +1,6 @@
 ---
 layout: works_entry
-title: Nasdaq.com Homepage
+title: Nasdaq.com
 image: http://jefff.co/images/large/nasdaq.com.jpg
 categories: [work]
 ---
