--- a/_posts/2013-01-11-sympaq.md
+++ b/_posts/2013-01-11-sympaq.md
@@ -9,4 +9,11 @@ categories: [work]
 
 <p>Sympaq is a leader in cost accounting software, but there website was stuck in the DOS age (witty, I know, but true). So they needed help <strong>visualizing what they offered</strong> as well as having an easier way to publish their knowledge. WordPress was the perfect solution for them, with a wee-bit of customization. We also helped with screencasting using screenr.com and simple voiceovers.</p>
 
+###What I Did
+
+- re-designed site to **increase content accessibility** (which was strong, just not accessible), both on site & off (for maximum seo-impact)
+- **simplified the navigation structure**, re-organized the information architecture
+- added in **stronger CTAs on all pages**
+- storyboarded / created How-To videos using Screenr.com
+
 <a href="http://sympaq.com/" class="button" data-icon="✈">View Project</a>
