--- a/_posts/2013-02-03-resizio.md
+++ b/_posts/2013-02-03-resizio.md
@@ -9,4 +9,10 @@ categories: [work]
 
 Have an image you want to use in a document, or on a website? But is it too big? Before you needed some sort of image editing software **and you needed to know what to do with it**. Not no more! Just upload, choose a max height or width and blammo.
 
+###What I Did
+
+- designed and built app to **help our/any clients resize images easily**
+- I've noticed a lot of clients don't have access to photo editing software, so this is a simple stop-gap
+- uses simple, user focused design to guide users thru the process--**basically just 2  steps; load an image, choose a max size and voila**
+
 <a href="http://image.jefff.co" class="button" data-icon="✈">Dev&rsquo;ing</a>
