--- a/_posts/2013-02-04-nasdaq.com.md
+++ b/_posts/2013-02-04-nasdaq.com.md
@@ -9,6 +9,11 @@ categories: [work]
 
 Nasdaq.com serves millions of page views per day. Their current homepage design was built for years gone by. So nclud helped redesign this and I built the front-end templates for integration with their custom CMS.
 
+###What I Did
+
+- built front-end for new homepage
+- added in **desktop down to tablet** RWD iteration (backwards yes, but it works)
+
 **Go live date TBD**
 
 <span class="button disabled" data-icon="✈">Coming Soon</span>
