Add in search, but not live, update resizio

--- a/_posts/2013-02-03-resizio.md
+++ b/_posts/2013-02-03-resizio.md
@@ -9,6 +9,8 @@ categories: [work]
 
 Have an image you want to use in a document, or on a website? But is it too big? Before you needed some sort of image editing software **and you needed to know what to do with it**. Not no more! Just upload, choose a max height or width and blammo.
 
+**Now supports CMYK to RGB conversion.** Or, I should, all images are converted to RGB for web support.
+
 ###What I Did
 
 - designed and built app to **help our/any clients resize images easily**
