Updates for case study for neustar

--- a/_posts/2013-03-01-neustar.md
+++ b/_posts/2013-03-01-neustar.md
@@ -7,7 +7,7 @@ title: Neustar.biz
 #image_desc_2: This is some detail of this image here.
 #image_3: http://jefff.co/images/tmcrnch.jpg
 #image_desc_3: This is some detail of this image here.
-categories: [case]
+categories: [case-study]
 ---
 
 <div class="details">
