Updates for case study for neustar

--- a/_posts/2013-03-01-neustar.md
+++ b/_posts/2013-03-01-neustar.md
@@ -12,18 +12,19 @@ categories: [case-study]
 
 <div class="details">
 	<h2 data-icon="⚒">IA + card sort / user-testing + wireframing + front-end build + responsive iteration</h2>
-	<p>Neustar.biz is the world's leader in .biz domain registration, and they are also a leader in big data. They help power some of the world's most trafficed sites, one of which is Google Analytics. <strong>But, their current site navigation setup, layout and design was helping to communicate this message</strong>. They were also preparing to roll out new branding for two business segments: users they can offer promotion services to and users they can offer protection services to.</p>
-	<p><strong><em>** Note:</em></strong> they had recently just rolled in three external sites into their main site, so the top nar on the current site was a requirement to stay. This was something that was communicated after the start of the project, so we just kind of had to roll with it. Ideally we would have updated how the internal content was navigable from the homepage, but in the end that was not up to us.</p>
-	<p>Also, this project was only to redefine and redesign their homepage and corporate site, which is basically anything underneath about us. If you dive deep into their site, you'll find a lot of pages have vastly different looks and feels, but this was just the scope of the project, per the client. So, along with my cohorts at nclud, we helped them to begin to recitfy these issues.</p>
+	<p>Neustar.biz is the world's leader in .biz domain registration, and they are also a leader in big data. They help power some of the world's most trafficed sites, one of which is Google Analytics. <strong>But, their current site navigation setup, layout and design was definitely not helping to communicate this message</strong>. In fact, it was only muddling it up further. They were also preparing to roll out new branding for two business segments: users they can offer promotion services to and users they can offer protection services to. So they came to us to help them figure out the best way to label their navigation as well as the best way to display the pertinent information on the homepage to their users.</p>
+	<h3>A few notes</h3>
+	<p>They had recently just rolled three external sites into their main site, so the top navigation on the current site was a requirement to stay; this was something that was communicated after the start of the project, so we just kind of had to roll with it. Ideally we would have updated how the internal content was navigable from the homepage, but in the end that was not up to us.</p>
+	<p>Also, this project was only to redefine and redesign their homepage and corporate site, which is basically anything underneath about us. If you dive deep into their site, you'll find a lot of pages have vastly different looks and feels, but this was just the scope of the project, per the client. So, bearing those requiremnts in mind, we did the best that we could.</p>
 	<h3>What I Did</h3>
 	<ul>
 		<li>led <strong>card-sorting / user-testing</strong> strategies with client</li>
-		<li>created list of labels &amp; worked with client to pear these down to a usable amount in the user-testing</li>
+		<li>created list of labels &amp; worked with client to pear these down to a usable amount for the user-testing</li>
 		<li>created <strong>working, visual layouts for proposed nav restructure and card sort labels</strong> (see below for details and link)</li>
 		<li><strong>created &amp; presented wireframes</strong> for proposed solutions for new home and interior pages</li>
 		<li>worked with card sort / user-testing company to <strong>iterate tests on the fly</strong></li>
-		<li>built <strong>front-end for comps, client-chosen comps, and approved comps</strong></li>
-		<li><strong>in progress:</strong> created wireframes for respnsive iterations &amp; building in responsive templates</li>
+		<li>built <strong>front-end for  all comps and approved directions</strong></li>
+		<li><strong>in progress:</strong> created wireframes for responsive iterations &amp; built in responsive templates</li>
 	</ul>
 </div>
 <div class="details c">
@@ -34,15 +35,15 @@ categories: [case-study]
 </figure>
 <div class="details">
 	<h2 data-icon="↓">How we got here:</h2>
-	<p>After the initial kick-off with Neustar, I started digesting their current site. The card sort was done as a way to help the user testers identify and group similar terms, as best they could, to try to get a better picture of what might be the best way for the navigation to be laid out. I put together a list of labels for the navigation as well as the labels for the card sorting as below (which you can <a href="http://browserspring.com/temp/neustar/old.html">view the live version here</a>).</p>
-	<p>I presented a few working options for the client to review, I always find something tangible that they can interact with works better than just a hypthetical version.</p>
+	<p>After the initial kick-off with the client, I started digesting their current site. The card sort was done as a way to help the user testers identify and group similar terms, as best they could, to try to get a better picture of what might be the best way for the navigation to be laid out. I put together a list of labels for the navigation as well as the labels for the card sorting as below (which you can <a href="http://browserspring.com/temp/neustar/old.html">view here</a>).</p>
+	<p>I presented a few [semi-]working options for the client to review; I always find something tangible that they can interact with works better than just a hypothetical version.</p>
 </div>
 <figure>
 	<img src="http://jefff.co/images/case/Preliminary-Card-Sort-for-Neustar.png" class="f" />
 </figure>
 <div class="details">
 	<h2 data-icon="↓">We then iterated down to here:</h2>
-	<p>After some discussions with the client, we iterated down to a few nagivation options and one set of labels for sorting (which you can <a href="http://browserspring.com/temp/neustar/">view the live version here</a>):</p>
+	<p>After some discussions with the client, we iterated down to a few nagivation options and one set of labels for sorting (which you can <a href="http://browserspring.com/temp/neustar/">view here</a>):</p>
 </div>
 <figure>
 	<img src="http://jefff.co/images/case/Preliminary-Card-Sort-for-Neustar-v2.png" class="f" />
@@ -52,7 +53,7 @@ categories: [case-study]
 	<p>Rather than doing hand sketching, I went straight into my favorite app for this, GoMockingbird. This allowed me to easily mock up a few different treatments for the homepage and different ways that we could present the information. Another benefit to this app is that it gives the client something more tangible to interact with again.</p>
 	<p>Below is a screencap of one of the mocks I created, but you can <a href="https://gomockingbird.com/mockingbird/#g326dye">view all of them online</a> (a few were deleted unforunately, but most of them are here). I also noted above that the top black bar had to remain the same as was currently on their old site, but this was communicated after the wireframes were created.</p>
 	<p>Some of the home comps have a standard content slider in them, but I was really pushing for them to go sliderless and just use something like <strong>version Home r2v1</strong>. I had recently read a study about how sliders can be distracting and actually detract from the overall message; and coupled with how many different things that Neustar does <strong>but does not</strong> communicate very well, I thought this would be the perfect fit.</p>
-	<p>I also suggested that we try adding in a navigation label for 'Who We Work With', or something that effect. I had never really seen this in the wild, and had thought it might be a nice way to offer users to discover just what it is that Neustar does and how it might help their business.</p>
+	<p>I also suggested that we try adding in a navigation label for 'Who We Work With', or something that effect. I had never really seen this in the wild, and had thought it might be a nice option to offer users another route to discover just what it is that Neustar does and how it might help their business.</p>
 </div>
 <figure>
 	<img src="http://jefff.co/images/case/Home-r1v1b.png" class="f" />
@@ -61,15 +62,16 @@ categories: [case-study]
 	<h2 data-icon="↓">We then moved onto the user-testing in Hotlanta.</h2>
 	<p>We then ran through an 11-hour day full of 12 users running through tests (conducted by an external company). These users were selected by the client, so we didn't have much input there, but as best we knew before they were vetted to be potential prospects. The testing turned out to be fairly insightful, and we learned a few good nuggets about some assumptions we had made: a lot of people <strong>DO</strong> care about the company they do business with.</p> 
 	<p>Not that in itself that is surprising, certainly not. However, that some users felt learning about a company before even really knowing if that company might be able to help them was very interesting to me. Of course, there were other users who only wanted to know what it was that Neustar did and how/if Nuestar could help them acheive any other their business goals.</p>
+	<p>I was also able to suggest edits to the tests after a few rounds when patterns were developing, but these patterns were not producing much beneficial feedback (regardless of positive or negative, any feedback is better than none).</p>
 	<h2 data-icon="↓">After we agreed on two directions per the wireframes &amp; user-testing, design began.</h2>
 	<p><strong>I did not do the design for this site, just an FYI.</strong> However I did do the front-end builds for this, and I added little tweaks as I felt necessary. Unfortunately, I do feel that the main message I was trying to convey in the wireframes were lost in the transition to the design stage, so I just wanted to note that. I don't think they came out poorly, it's just that certain visual emphasis I had intended for was lost in translation from PM to designer.</p>
 	<p>We <a href="http://browserspring.com/temp/neustar/b/">built one of comps for users to test</a> out, and <a href="http://browserspring.com/temp/neustar/s/">one just as static</a>.</p>
 	<h2 data-icon="↓">A bit more user-testing in NYC.</h2>
-	<p>This round of testing was done to validate (or invalidate) the clients choice for design direction. Users were tasked with some of the following: <strong>deciding which version they preferred, what content did they feel was more important or less important on the page, what content was lacking from the page, and what they thought of either direction overall</strong>. While we did gain some good insights here, I think these tasks were a misstep. I wrote a <a href="/thought/good-design-feedback-is-hard/">blog post about how I felt</a> that the tasks and questions they were being asked here were ineffectual and semi-counter productive, but this was not created by us unfortanately.</p>
-	<p>The interactive comp was chosen to be the more successful version, which also did not come as a surpise. However, the reason we only built one and had a static version for the second was due to timeline and client budget. Normally, I would not have wanted to do something like this where users are testing two different mediums. </p>
+	<p>This round of testing was done to validate (or invalidate) the clients choice for design direction. Users were tasked with some of the following: <strong>deciding which version they preferred, what content did they feel was more important or less important on the page, what content was lacking from the page, and what they thought of either direction overall</strong>. While we did gain some good insights here, I think these tasks were a misstep. I wrote a <a href="/thought/good-design-feedback-is-hard/">blog post about how I felt</a> that the tasks and questions they were being asked here were ineffectual and semi-counter productive, but this was not created by us unfortunately.</p>
+	<p>The interactive comp was chosen to be the more successful version, which also did not come as a surpise. However, the reason we only built one and had a static version for the second was due to timeline and client budget. Normally, I would not have wanted to do something like this, where users are testing in two different mediums.</p>
 	<h2 data-icon="↓">And onto design iterations &amp; responsive.</h2>
 	<p>After digesting the feedback from the user-testing and discussing this with the client to get their thoughts, one direction was chosen and we focussed on this. We made a few iterations until we came to something that the client was really happy with, which is what is live now.</p>
 	<p>At this point, we were then tasked with iterating backwards (of sorts) to make the templates we built reponsive. <strong>This is definitely not the right way to do this</strong>, but just something we're rolling with. This is still in progress, but hopefully this will be live pretty soon. There are a few wireframes in GoMockingbird that represent what we wanted to do here, so feel free to dig those as well.</p>
 	<h2 data-icon="fin">All in all, I think it was a success.</h2>
-	<p>I mean that in the sense that we helped give the client a lot of insight into what they are doing, how they are presenting it to their users and potential users, and how to go forward. As you may have noticed, there were a lot of handcuffs in this project that we could not free ourselves from. That being said, they got a lot of knowledge and insights from us, and they know there are still some major flaws with the site. But, they now have a better idea of where to start, and how to do it.</p>
+	<p>I mean that in the sense that we helped give the client a lot of insight into what they are doing, how they are presenting it to their users and potential users, and how to go forward. As you may have noticed, there were a lot of handcuffs in this project that we could not free ourselves from. That being said, [hopefully] they got a lot of knowledge from us &amp; from these test, and they know there are still some major flaws with the site. But, they now have a better idea of where to start, and how to go about making it happen.</p>
 </div>
