Updates for kickarse

--- a/_posts/2013-03-18-kickarse.md
+++ b/_posts/2013-03-18-kickarse.md
@@ -5,7 +5,7 @@ image: http://jefff.co/images/kickarse.jpg
 categories: [work]
 ---
 
-<h2 data-icon="⚒">__uber-early__ design + front-end</h2>
+<h2 data-icon="⚒"><em>(uber-early)</em> design + front-end</h2>
 
 Just a simple template that incorporates a removal of homepage sliders in favor of two large split callouts, click-to-view nav, mobile/desktop detection (semi-RESS) and some mobile-to-wide RWD-ness.
 
