--- a/_posts/2013-06-06-yesno.md
+++ b/_posts/2013-06-06-yesno.md
@@ -5,8 +5,10 @@ image: http://jefff.co/images/yesno.png
 categories: [work]
 ---
 
-<h2 data-icon="⚒">design + front-end + ruby on rails</h2>
+<h2 data-icon="⚒">design + front-end + ruby on rails + s3 storage</h2>
 
 **Still in progress** yesno is a simple Ruby on Rails app that allows users (without logging in) to vote on yes or no questions. They can also create their own and share them socailly or with friends.
+
+**two custom svg logos that are clickable to filter the questions.**
 
 <a class="button" href="http://yesno.jefff.co/">Dev&rsquo;ing</a>
