--- a/_posts/2013-06-06-yesno.md
+++ b/_posts/2013-06-06-yesno.md
@@ -5,10 +5,15 @@ image: http://jefff.co/images/yesno.png
 categories: [work]
 ---
 
-<h2 data-icon="⚒">design + front-end + ruby on rails + s3 storage</h2>
+<h2 data-icon="⚒">design + front-end + ruby on rails + heroku / s3 storage</h2>
 
 **Still in progress** yesno is a simple Ruby on Rails app that allows users (without logging in) to vote on yes or no questions. They can also create their own and share them socailly or with friends.
 
-**two custom svg logos that are clickable to filter the questions.**
+###What I Think Is Sweet
+
+- I designed & am using two custom svg logos that are clickable to filter the questions
+- vertically centered and responsive
+- low-bandwidth cost due to calling small images that are optimized on upload via paperclip and imagemagick
+- full size images are linked to on detail pages to help inform user answers
 
 <a class="button" href="http://yesno.jefff.co/">Dev&rsquo;ing</a>
