Update CSS for font size

--- a/_posts/2013-06-06-yesno.md
+++ b/_posts/2013-06-06-yesno.md
@@ -1,7 +1,7 @@
 ---
 layout: works_entry
 title: yesno
-image: http://jefff.co/images/yesno.png
+image: http://jefff.co/images/yesno-l2.png
 categories: [work]
 ---
 
