--- a/_posts/2013-06-14-font-face.md
+++ b/_posts/2013-06-14-font-face.md
@@ -1,6 +1,6 @@
 ---
-layout: workss_entry
+layout: thoughts_entry
 title: Font-face Character Swapping
-categories: [work]
+categories: [thought]
 external_link: http://jefff.co/misc/font-face-character-swap/
 ---
